# geometry-kernel

./: .gitignore  CMakeLists.txt  LICENSE  README.md  polygon-triangulation.code-workspace
src/core/: area.hpp  point.hpp  predicates.hpp  tolerance.hpp  types.hpp  vector.hpp
src/queries/: closest_point.hpp
tests/: CMakeLists.txt
tests/core/: test_area.cpp  test_fixtures.hpp  test_point.cpp  test_predicates.cpp  test_tolerance.cpp  test_types.cpp  test_vector.cpp
tests/queries/: test_closest_point.cpp
